	* #2228: Fix Apply-To-All in AddTorrent Dialog copying file renames to other torrents

==== Console ====
	* LP#1004793: Enable use of connect command in non-interactive mode
	* Ensure console commands are executed in order
	* #2065: Fix crash with missing closing quote
	* #1397: Add support for -s STATE in info command

==== WebUI ====
	* #2112: Fix world readable tmp directory in json_api
	* #2069: Fix login window layout problem when using larger than default font size
	* #1890: Fix columns in files and peers view could use some spacing
	* #2103: Fix sorting by name is case-sensitive [sedulous]
	* #2120: Fix manually entered values not being saved in spinners
	* #2212: Fix unable to scroll in proxy preferences page
	* Fix autoconnecting to the default host
	* #2046: Fix plugins not enabling properly until after refreshing page
	* #2125: Fix plugin methods not being available when enabled until restart
	* #2085: Fix not showing torrents in sidebar for categories other than 'All' in classic mode
	* #2232: Fix flag icon path in Peers Tab missing deluge.config.base
	* Fix submenus closing upon mouse click

==== Windows OS ====
	* Hide the cmd windows when running deluged.exe or deluge-web.exe
	* Add deluged-debug.exe and deluge-web-debug.exe that still show the cmd window
	* Add gtk locale files to fix untranslated text
	* Fix the Open Folder option not working with non-ascii paths
	* Fix the daemon starting with config dir containing spaces
	* Fix Windows tray submenu items requiring right-click instead of left-click

==== OS X ====
	* Fix Open File/Folder option

==== Execute ====
	* Fix execute plugin not working with unicode torrent names

=== Deluge 1.3.5 (09 April 2012) ===
==== Core ====
	* Fix not properly detecting when torrent is at end of queue
	* #2049: Preserve order when moving multiple torrents in the queue

==== GtkUI ====
	* Modified fix for #1957, keyerror with non-acsii columns
	* Fix translation of items in Sidebar and Torrent Menu